# EquiScript

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  EquiConfig.h.in  README.md  ctest_configuration.cmake
.github/workflows/: cmake-multi-platform.yml
Equi/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Equi.cpp  Equi.h  Tokenizer.cpp  Tokenizer.h
EquiCore/: CMakeLists.txt  EquiCore.cpp  EquiCore.h
TestFiles/Tokenizer/: harderparse.txt  linecomments.txt
